[package]
name = "smol-bench"
version.workspace = true
authors.workspace = true
description.workspace = true
edition = "2021"

[dependencies]
smol = "^1.3.0"
async-channel = "^1.4.2"
async-executor = "^1.5.0"
async-task = "^4.4.1"
blocking ="^1.3.0"
ioprio = "^0.2.0"
futures-concurrency = "^7.2.1"
flume = { version = "0.11", default-features = false }
futures-lite = "1.12.0"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "^0.2.134"
thread-priority = "0.13.1"
