[package]
name = "tokio-bench"
version.workspace = true
authors.workspace = true
description.workspace = true
edition = "2021"

[dependencies]
tokio = { version = "^1.21.2", features= ["rt-multi-thread", "macros", "sync", "time"]}
ioprio = "^0.2.0"
futures-concurrency = "^7.2.1"
shared = {path = "../shared" }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "^0.2.134"
thread-priority = "0.13.1"
